# esphome_pc_monitor

./: README.md  esphome_pc_monitor.py  esphome_pc_monitor.service  pyproject.toml  requirements.txt  setup.py
esphome_pc_monitor/: __init__.py  __main__.py
