[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esphome-pc-monitor"
version = "0.1.0"
description = "PC temperature monitoring system that exposes CPU and GPU temperatures as ESPHome sensors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioesphomeserver @ git+https://github.com/peterkeen/aioesphomeserver.git",
    "colored"
]

[project.scripts]
esphome-pc-monitor = "esphome_pc_monitor:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["esphome_pc_monitor*"]
